hard-gists/ede1aec7b3801eb08bc0/run.log
=== Docker Run Log for ede1aec7b3801eb08bc0 ===
Started at: Mi 29. Okt 21:02:41 CET 2025

[2025-10-29 21:02:41] START: Running container for ede1aec7b3801eb08bc0
[2025-10-29 21:02:42] SUCCESS: Container c588a3acda4813c0fddc35dc0d7db7c170f93e7e43b9c29007bf285069938ecf started for ede1aec7b3801eb08bc0
=== Container logs for ede1aec7b3801eb08bc0 ===
  File "/snippet.py", line 17
    print "Signed on"
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for ede1aec7b3801eb08bc0 ===
[2025-10-29 21:02:44] INFO: Container c588a3acda4813c0fddc35dc0d7db7c170f93e7e43b9c29007bf285069938ecf has stopped
